html changes and trial

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -9,7 +9,7 @@ padding: 20px 0;
 text-align:center;
 }
 body {
-padding-top: 15%;
+padding-top: 10px;
 padding-bottom: 15px;
 }
 .global-search {
@@ -35,4 +35,13 @@ border: none
 }
 .step-links a{
 color: #4285F4;
+}
+hr#top-bar {
+    border: 1px solid gray;
+    margin: 0.1em;
+    padding: 0;
+}
+
+div#top-panel {
+    padding-left: 10px;
 }
