--- a/app/static/main.css
+++ b/app/static/main.css
@@ -45,3 +45,19 @@ hr#top-bar {
 div#top-panel {
     padding-left: 10px;
 }
+
+div#main-block {
+    margin: 10% 10%;
+}
+
+div#login-frame.login-frame {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    max-width: 400px;
+    padding: 10px;
+    border: 1px solid gray;
+    box-shadow: 5px 5px 2px 2px rgba(20,20,20,0.2);
+
+}
