--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,14 +11,35 @@
     <div id="top-panel">
         <div id="group-members">Group Members: Chang Wei: cw887, Qichen Hu: qh75, Yuwen Cai: yc687, Yitian Lin: yl698</div>
         <div>NextGame:
-            <a href="/index">Home</a> |
-            <a href="/login">Login</a> |
-            <a href="/search">Search</a> |
-            <a href="/videos">Videos</a>
+            {% if current_user.is_anonymous %}
+            <a href="{{ url_for('register') }}">Register</a> |
+            <a href="{{ url_for('login') }}">Login</a> |
+            {% else %}
+            <a href="{{ url_for('logout') }}">Logout</a> |
+            {% endif %}
+            <a href={{ url_for('index') }}>Home</a> |
+            <a href={{ url_for('irsystem.search') }}>Search</a> |
+            <a href="/videos">Videos</a> |
+            <a href="/acknowledgement">Acknowledgement</a>
         </div>
     </div>
     <hr id="top-bar">
-    {% block content %} {% endblock %}
 
+    <div>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-warning">
+               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                {{ message }}
+            </div>
+            {% endfor %}
+        {% endif %}
+        {% endwith %}
+    </div>
+
+    <div id="main-block">
+        {% block content %} {% endblock %}
+    </div>
 </body>
 </html>
