--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>This is the index page!</h1>
+    {% if current_user.is_authenticated %}
+    <h2>Hello, {{ current_user.username }}!</h2>
+    {% endif %}
     <h2>Have you ever troubled with looking for a touching game?</h2>
 {% endblock %}
