--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="top-panel">
-        <div id="group-members">Group Members: Chang Wei: cw887, Qichen Hu: qh75, Yuwen Cai: yc687, Yitian Lin: yl698</div>
+        <div id="group-members">Group Members: Chang Wei: cw887, Qichen Hu: qh75, Grace Zhao(rz92), Yuwen Cai: yc687, Yitian Lin: yl698</div>
         <div>NextGame:
             {% if current_user.is_anonymous %}
             <a href="{{ url_for('register') }}">Register</a> |
