--- a/app/static/main.css
+++ b/app/static/main.css
@@ -1,63 +1,37 @@
-@media (min-width: 1200px) {
-.container {
-    max-width: 970px;
+@font-face {
+    font-family: Bisect;
+    src: url("../static/fonts/Bisect.otf") format("opentype");
 }
-}
-@media (min-width:400px){
-.global-search {
-padding: 20px 0;
-text-align:center;
-}
+
 body {
-padding-top: 10px;
-padding-bottom: 15px;
-}
-.global-search {
-text-align:center;
-padding:10px;
-}
-.global-search .form-control {
-width:500px;
-}
-.global-search * {
-display:inline-block;
-margin-bottom:0;
-}
-}
-.topcorner{
-position:absolute;
-top:2%;
-right:2%;
-}
-.btn{
-background-color: #4285F4;
-border: none
-}
-.step-links a{
-color: #4285F4;
-}
-hr#top-bar {
-    border: 1px solid gray;
-    margin: 0.1em;
-    padding: 0;
+    background: url('../static/images/background.png') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
-div#top-panel {
-    padding-left: 10px;
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
 }
 
-div#main-block {
-    margin: 10% 10%;
+.placeholder {
+    height: 3rem;
 }
 
-div#login-frame.login-frame {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-    max-width: 400px;
-    padding: 10px;
-    border: 1px solid gray;
-    box-shadow: 5px 5px 2px 2px rgba(20,20,20,0.2);
+.search-title {
+    font-family: Bisect;
+}
 
+.search-card {
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+.search-card-row {
+    margin-bottom: 2.5rem;
 }
