--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,45 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../static/bootstrap.min.css">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../static/main.css">
     <title>NextGame</title>
 </head>
-<body style='background-image: url("../static/images/background4.jpeg"); background-size: cover;'>
 
-    <div id="top-panel">
-        <div id="group-members">Group Members: Chang Wei: cw887, Qichen Hu: qh75, Grace Zhao(rz92), Yuwen Cai: yc687, Yitian Lin: yl698</div>
-        <div>NextGame:
-            {% if current_user.is_anonymous %}
-            <a href="{{ url_for('register') }}">Register</a> |
-            <a href="{{ url_for('login') }}">Login</a> |
-            {% else %}
-            <a href="{{ url_for('logout') }}">Logout</a> |
-            {% endif %}
-            <a href="{{ url_for('index') }}">Home</a> |
-            <a href="{{ url_for('irsystem.search') }}">Search</a> |
-            <a href="/videos">Videos</a> |
-            <a href="/acknowledgement">Acknowledgement</a>
-        </div>
-    </div>
-    <hr id="top-bar">
-
-    <div>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-            <div class="alert alert-warning">
-               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                {{ message }}
-            </div>
-            {% endfor %}
-        {% endif %}
-        {% endwith %}
-    </div>
-
+<body>
     <div id="main-block">
         {% block content %} {% endblock %}
-    </div>
+    </div>  
+      <div class="footer">
+        <p class="blockquote-footer"><cite>Group Members: Chang Wei(cw887), Qichen Hu(qh75), Grace Zhao(rz92), Yuwen Cai(yc687), Yitian Lin(yl698)</cite></p>
+      </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
+
 </html>
