--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
+{% extends "base.html" %}
+{% block content %}
     <h1>404: Resource not found</h1>
-  </body>
-</html>
+    <p><a href="{{ url_for('index') }}">Back</a></p>
+{% endblock %}
