--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,9 +7,12 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.0.4/tagify.min.css"
+        integrity="sha512-Z44wu8M4mVpeK2GbdkCj4X/FqgPeMzAPQEwLtit80lMkreR2w4J4uPuSRQYlmGUt3e0QPGZBaA2A2Yn4E8rHAw=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="../static/main.css">
     <title>NextGame</title>
 </head>
@@ -17,13 +20,22 @@
 <body>
     <div id="main-block">
         {% block content %} {% endblock %}
-    </div>  
-      <div class="footer">
-        <p class="blockquote-footer"><cite>Group Members: Chang Wei(cw887), Qichen Hu(qh75), Grace Zhao(rz92), Yuwen Cai(yc687), Yitian Lin(yl698)</cite></p>
-      </div>
+    </div>
+    <div class="footer">
+        <p class="blockquote-footer"><cite>Group Members: Grace Zhao(rz92), Yuwen
+                Cai(yc687), Yitian Lin(yl698), Chang Wei(cw887), Qichen Hu(qh75)</cite></p>
+    </div>
 </body>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.0.4/jQuery.tagify.min.js"
+    integrity="sha512-+YqV5fCDaA3TbSSfjqMgQO5tSdJK+dLOY9lRn4rbqu3XvAaQemtT65+HTcaX8egmtzQiSn1T5WwRgj9K9Fg6Gg=="
+    crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
+{% block script %} {% endblock %}
 
 </html>
