--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -7,7 +7,7 @@
             <div class="placeholder"></div>
             <h1 class="display-2 text-white search-title">NEXTGAME</h1>
             <p class="text-white-50 lead">&nbsp;Find your next favorite game via books/movies/games you enjoy. Apply
-                tags to further adjust to your quirks</p>
+                tags to further adjust to your quirks. <strong>Steam games only.</strong></p>
             <div class="placeholder"></div>
             <div class="card search-card">
                 <div class="card-body">
@@ -20,14 +20,14 @@
                                     </div>
 
                                     <div class="col-3">
-                                        <input class="form-check-input" type="radio" name="playerType"
+                                        <input class="form-check-input" type="checkbox" name="playerType"
                                             id="playerTypeSingle">
                                         <label class="form-check-label" for="playerTypeSingle">
                                             <i class="bi bi-person-fill text-primary"></i> single-player
                                         </label>
                                     </div>
                                     <div class="col-3">
-                                        <input class="form-check-input" type="radio" name="playerType"
+                                        <input class="form-check-input" type="checkbox" name="playerType"
                                             id="playerTypeMulti">
                                         <label class="form-check-label" for="playerTypeMulti">
                                             <i class="bi bi-people-fill text-primary"></i> multi-player
