--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>404: Resource not found</h1>
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+    <p><a href="{{ url_for('irsystem.home') }}">Back</a></p>
 {% endblock %}
