--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <!-- CSS only -->
+    <link rel="icon" href="../static/images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
@@ -21,7 +22,7 @@
     <div id="main-block">
         {% block content %} {% endblock %}
     </div>
-    <div class="footer">
+    <div class="footer row justify-content-md-center">
         <p class="blockquote-footer"><cite>Group Members: Grace Zhao(rz92), Yuwen
                 Cai(yc687), Yitian Lin(yl698), Chang Wei(cw887), Qichen Hu(qh75)</cite></p>
     </div>
