further reduce scale. Fix X overflow

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,12 +19,14 @@
 </head>
 
 <body>
-    <div id="main-block">
-        {% block content %} {% endblock %}
-    </div>
-    <div class="footer row justify-content-md-center">
-        <p class="blockquote-footer"><cite>Group Members: Grace Zhao(rz92), Yuwen
-                Cai(yc687), Yitian Lin(yl698), Chang Wei(cw887), Qichen Hu(qh75)</cite></p>
+    <div class="container">
+        <div id="main-block">
+            {% block content %} {% endblock %}
+        </div>
+        <div class="footer row justify-content-md-center">
+            <p class="blockquote-footer"><cite>Group Members: Grace Zhao(rz92), Yuwen
+                    Cai(yc687), Yitian Lin(yl698), Chang Wei(cw887), Qichen Hu(qh75)</cite></p>
+        </div>
     </div>
 </body>
 
