--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -2,4 +2,5 @@
 {% block content %}
     <h1>404: Resource not found</h1>
     <p><a href="{{ url_for('irsystem.home') }}">Back</a></p>
+    <p>{{ error }}</p>
 {% endblock %}
